--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vee-validate",
-  "version": "1.0.0-beta.7",
+  "version": "2.0.0-beta.12",
   "description": "Simple Vue.js input validation plugin",
   "main": "dist/vee-validate.js",
   "homepage": "http://vee-validate.logaretm.com",
@@ -34,10 +34,9 @@
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.15.2",
-    "babel-cli": "^6.16.0",
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-external-helpers": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "cross-env": "^2.0.0",
     "eslint": "^3.1.1",
@@ -48,7 +47,6 @@
     "rollup": "^0.36.0",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "webpack-babel-external-helpers": "^0.1.0"
+    "rollup-plugin-uglify": "^1.0.1"
   }
 }
